# Final-Project_Group-3

./: Project_Proposal.docx  QuadChart.pptx  README.md  Team3_SwarmRobots_FinalProjectPresentation.pptx
.github/workflows/: build_and_coveralls.yml
docs/two_wheel_robot_batch_add/html/: files.html  globals_func.html  globals_vars.html  two__wheel__robot__batch__add_8cpp.html  two__wheel__robot__manager_8cpp__incl.map  two__wheel__robot__manager_8cpp__incl.md5
docs/two_wheel_robot_batch_add/html/search/: all_0.js  all_2.js  all_3.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_1.js
docs/two_wheel_robot_batch_add/latex/: files.tex  refman.tex  two__wheel__robot__batch__add_8cpp.tex  two__wheel__robot__manager_8cpp__incl.md5
docs/two_wheel_robot_line_formation/html/: files.html  globals.html  globals_func.html  globals_vars.html  two__wheel__robot__line__formation_8cpp.html  two__wheel__robot__line__formation_8cpp__incl.map  two__wheel__robot__line__formation_8cpp__incl.md5
docs/two_wheel_robot_line_formation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/two_wheel_robot_line_formation/latex/: files.tex  refman.tex  two__wheel__robot__line__formation_8cpp.tex  two__wheel__robot__line__formation_8cpp__incl.md5
docs/two_wheel_robot_manager/html/: globals.html  two__wheel__robot__batch__add_8cpp__incl.map  two__wheel__robot__batch__add_8cpp__incl.md5  two__wheel__robot__manager_8cpp.html
docs/two_wheel_robot_manager/html/search/: all_1.js  variables_0.js
docs/two_wheel_robot_manager/latex/: two__wheel__robot__batch__add_8cpp__incl.md5  two__wheel__robot__manager_8cpp.tex
readme_image/: TurtleBot_Swarm_Sample.pptx
results/: cppcheckreport  cppcheckreport1  cpplintreport
src/: line_formation.cpp
src/catkin_simple/: CMakeLists.txt  package.xml
src/swarm_robot_description/: CMakeLists.txt  package.xml
src/swarm_robot_description/launch/: initialize.launch  two_wheel_robot.launch
src/swarm_robot_description/src/: two_wheel_robot_batch_add.cpp  two_wheel_robot_manager.cpp
src/swarm_robot_description/urdf/: two_wheel_robot.urdf
src/swarm_robot_description/worlds/: empty.world
src/swarm_robot_msgs/swarm_robot_msg/: CMakeLists.txt  package.xml
src/swarm_robot_msgs/swarm_robot_msg/msg/: two_wheel_robot.msg
src/swarm_robot_msgs/swarm_robot_srv/: CMakeLists.txt  package.xml
src/swarm_robot_msgs/swarm_robot_srv/srv/: kpkv_msg.srv~  two_wheel_robot_update.srv
src/swarm_robot_simulation/: CMakeLists.txt  package.xml
src/swarm_robot_simulation/src/: two_wheel_robot_line_formation.cpp
test/: basic_test.cpp
