<?xml version="1.0"?>
<package>
  <name>swarm_robot_msg</name>
  <version>0.0.0</version>
  <description>Line Formation Algo Swarm 2-wheeled-robot</description>
  <maintainer email="dhineshrajasekaran@gmail.com">dhinesh</maintainer>
  <license>MIT License</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>